# x-commit

./: .env.example  .gitignore  README.md  ecosystem.config.js  pyproject.toml
src/x_commit/: __init__.py  analyzer.py  bot.py  claude_client.py  cli.py  config.py  formatter.py  github_client.py  ignore_patterns.py  message_parser.py  slack_client.py
